add customer basic functions with logins

--- a/src/main/webapp/WEB-INF/config.properties
+++ b/src/main/webapp/WEB-INF/config.properties
@@ -1,8 +1,9 @@
 host.url=http://localhost:8080/echonosenserest_war_exploded/api/
 
+model.pricePredict = https://echonosenseai.azurewebsites.net/predict_pric
+model.sentiment = https://echonosenseai.azurewebsites.net/predict_sentiment
 
 //systemUrls
 
 
-login.end=
 
