--- a/src/main/webapp/WEB-INF/config.properties
+++ b/src/main/webapp/WEB-INF/config.properties
@@ -1,9 +1,20 @@
 host.url=http://localhost:8080/echonosenserest_war_exploded/api/
-
 model.pricePredict = https://echonosenseai.azurewebsites.net/predict_pric
 model.sentiment = https://echonosenseai.azurewebsites.net/predict_sentiment
 
 //systemUrls
-
+admin.log.get = http://localhost:8080/echonosenserest_war_exploded/api/adminlogs
+coins.get = http://localhost:8080/echonosenserest_war_exploded/api/coins
+price.coin.get=http://localhost:8080/echonosenserest_war_exploded/api/prices/coin/
+coin-predictionsURL=http://localhost:8080/echonosenserest_war_exploded/api/coin-predictions/
+notificationUrl=http://localhost:8080/echonosenserest_war_exploded/api/notifications/user/
+usersurl=http://localhost:8080/echonosenserest_war_exploded/api/users/
+ historyEndpoint = 'http://localhost:8080/echonosenserest_war_exploded/api/payments';
+servicesEndpoint = 'http://localhost:8080/echonosenserest_war_exploded/api/subscriptions';
+ subscriptionEndpoint = 'http://localhost:8080/echonosenserest_war_exploded/api/subscriptions';
+coinEndpoint=http://localhost:8080/echonosenserest_war_exploded/api/news/coin/
+newsEndpoint=http://localhost:8080/echonosenserest_war_exploded/api/news
+notificationEnd=http://localhost:8080/echonosenserest_war_exploded/api/notifications
+paymentEnd=http://localhost:8080/echonosenserest_war_exploded/api/payments
 
 
